--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "recharts": "^2.15.1"
