--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/cli": "^4.0.3",
     "@tailwindcss/postcss": "^4.0.3",
+    "@tanstack/react-query": "^5.67.1",
+    "@tanstack/react-query-devtools": "^5.67.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "lucide-react": "^0.510.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-datepicker": "^8.1.0",
