--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
-/src/constants/Constants.jsx
+# /src/constants/Constants.jsx
 
 # Editor directories and files
 .vscode/*
